--- a/src/app/pages/registro/registro.component.html
+++ b/src/app/pages/registro/registro.component.html
@@ -1,7 +1,9 @@
 <div class="limiter">
         <div class="container-login100">
             <div class="wrap-login100 p-t-50 p-b-90">
-                <form (ngSubmit)="onSubmit()" class="login100-form validate-form flex-sb flex-w">
+                <form (ngSubmit)="onSubmit(formRegistro)" 
+                    #formRegistro="ngForm"
+                    class="login100-form validate-form flex-sb flex-w">
     
                     <span class="login100-form-title p-b-51">
                         Crear nueva cuenta
@@ -10,9 +12,11 @@
                     <!-- <span class="text-danger">El correo es obligatorio</span> -->
                     <div class="wrap-input100 m-b-16">
                         <input class="input100" 
-                               type="text" 
+                               type="email" 
                                name="email" 
                                [(ngModel)]="user.email"
+                               required
+                               email
                                placeholder="Email">
     
                         <span class="focus-input100"></span>
@@ -24,6 +28,8 @@
                                type="text" 
                                name="nombre" 
                                [(ngModel)]="user.name"
+                               required
+                               minlength="2"
                                placeholder="Nombre y apellidos">
     
                         <span class="focus-input100"></span>
@@ -35,6 +41,8 @@
                                type="password" 
                                name="pass"
                                [(ngModel)]="user.password" 
+                               required
+                               minlength="6"
                                placeholder="Password">
                         <span class="focus-input100"></span>
                     </div>
