--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,3 +1,5 @@
-<p>
-  home works!
-</p>
+<div class="m-5">
+  <h1>Mi aplicación</h1>
+  <hr>
+  <button class="btn btn-outline-danger" (click)="logout()">Cerrar sesión</button>
+</div>
